@@ -1,38 +1,35 @@
 package commands.runnables.nsfwcategory;
 
-import java.util.HashSet;
+import java.util.Collections;
 import java.util.Locale;
 import java.util.Set;
 import commands.listeners.CommandProperties;
-import commands.runnables.DanbooruAbstract;
+import commands.runnables.RealbooruAbstract;
 
 @CommandProperties(
-        trigger = "hblowjob",
+        trigger = "femboy",
         executableWithoutArgs = true,
         emoji = "\uD83D\uDD1E",
         nsfw = true,
         maxCalculationTimeSec = 5 * 60,
         requiresEmbeds = false,
         patreonRequired = true,
-        aliases = { "hentaiblowjob" }
+        aliases = { "rlfemboy", "reallifefemboy" }
 )
-public class HentaiBlowjobCommand extends DanbooruAbstract {
+public class FemboyCommand extends RealbooruAbstract {
 
-    public HentaiBlowjobCommand(Locale locale, String prefix) {
+    public FemboyCommand(Locale locale, String prefix) {
         super(locale, prefix);
     }
 
     @Override
     protected String getSearchKey() {
-        return "animated fellatio -3d";
+        return "animated femboy";
     }
 
     @Override
     protected Set<String> getAdditionalFilters() {
-        HashSet<String> filters = new HashSet<>(super.getAdditionalFilters());
-        filters.addAll(Set.of("yaoi", "yuri", "shemale", "lesbian", "gay", "futa", "futanari", "trap", "otoko_no_ko", "3d",
-                "blender_(medium)", "pixel_art"));
-        return filters;
+        return Collections.emptySet();
     }
 
     @Override
